# lego

./: README.md  example_config.yaml  pyproject.toml
lego/: train.py
lego/models/: attention.py  cgpt.py  conv.py  drift.py  embedding.py  flow.py  modules.py  moe.py  norm.py
lego/training/: __init__.py
lego/utils/: __init__.py
