[project]
name = "lego"
version = "0.1.0"
description = "Building blocks"
authors = [
    {name = "Jeff Shen",email = "shenjeff@princeton.edu"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
